Changelgo :  - Fix world cruise hero banner (index page) on small desktop and tablet

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/new-design/components.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base-b/less/new-design/components.less
@@ -285,6 +285,13 @@
 	}
 }
 
+@media (min-width:@screen-md-min) and (max-width:@screen-md-max){
+	.c-combo-cruise-header__content__resume {
+		margin-top:10px;
+		margin-bottom:10px;
+	}
+}
+
 @media (width:@screen-md-min){
 	.thumbnail .c-vertical-teaser__caption {
 	    padding: 12px 16px 40px !important;
